A lot of early dev changes.

--- a/app/deploy.yml
+++ b/app/deploy.yml
@@ -20,4 +20,18 @@
     - name: available
     - name: winusers
       winusers_password: "{{ lookup('env', 'USER_PASSWORD') }}"
+    #- name: winpatch
 
+- name: configure console
+  gather_facts: no
+  hosts: console
+
+  roles:
+    - name: available
+    #- name: patch
+    - name: console
+      console_user_pass: "{{ lookup('env', 'USER_PASSWORD') }}"
+      console_admin_pass: "{{ lookup('env', 'ADMIN_PASSWORD') }}"
+      console_domain: "{{ lookup('env', 'LAB_PREFIX') + lookup('env', 'AWS_R53_DOMAIN') }}"
+      console_secret_key: "{{ lookup('env', 'ADMIN_PASSWORD') }}"
+      console_user_count: "{{ lookup('env', 'WIN_NODE_COUNT') }}"
