--- a/app/roles/console/defaults/main.yml
+++ b/app/roles/console/defaults/main.yml
@@ -3,3 +3,5 @@ console_admin_pass: notapassword
 console_user_count: 1
 console_domain: virtlab.example.com
 console_secret_key: notapassword
+console_ssl_cert: ""
+console_ssl_key: ""
