Created playbook to tear down console only.

--- a/app/roles/infrastructure/tasks/main.yml
+++ b/app/roles/infrastructure/tasks/main.yml
@@ -2,6 +2,7 @@
   terraform:
     project_path: "/app/tf/"
     state: present
+    targets: "{{ infrastructure_targets }}"
   when: infrastructure_action != 'destroy'
   tags:
     - terraform
@@ -11,6 +12,7 @@
   terraform:
     project_path: "/app/tf/"
     state: absent
+    targets: "{{ infrastructure_targets }}"
   when: infrastructure_action == 'destroy'
   tags:
     - terraform
