--- a/app/roles/console/tasks/main.yml
+++ b/app/roles/console/tasks/main.yml
@@ -13,9 +13,9 @@
   file:
     path: /etc/console
     state: directory
-    owner: root
-    group: root
-    mode: 0755
+    owner: "1000"
+    group: "1000"
+    mode: "0700"
   notify: restart console
 
 - name: parse web shortcut templates
@@ -63,7 +63,7 @@
     label: "{{ item.dest }}"
 
 - name: create the console container
-  command: podman create -d --name console -v /etc/console:/data:Z -p 80:8080 -p 443:8443 quay.io/rmkraus/virtlab-console:latest
+  command: podman create -d --name console -v /etc/console:/data:Z -p 80:1080 -p 443:1443 quay.io/rmkraus/virtlab-console:latest
   args:
     creates: /etc/systemd/system/console.service
 
