--- a/app/deploy.yml
+++ b/app/deploy.yml
@@ -5,6 +5,7 @@
   hosts: localhost
 
   roles:
+    - name: keypair
     - name: infrastructure
     - name: inventory
       inventory_win_node_count: "{{ lookup('env', 'WIN_NODE_COUNT') }}"
